2007-10-31  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*,Widget.h: Receive user data dir to store local data.
	* LocationProvider.cpp: Use the user data dir for component and xpti
	registry. Use the mozilla directories to load plugins and other shared
	mozilla things. No need to use local directories anymore.

2007-10-30  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*, Widget.*: add blur entry point to catch
	when the webbrowser control loses focus

2007-10-18  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: Add missing headers to EXTRA_DIST

2007-10-18  Andreia Gaita  <avidigal@novell.com>

	* Widget.cpp: fix pointer cast for 64-bit arch, fix asynch 
	return value

2007-10-07  Andreia Gaita  <avidigal@novell.com>

	* Implement helper methods for the nsString class, to 
	initialize/destroy nsString instances and get/set the actual
	chars.
	All dom interface methods that have string parameters
	take a nsString class, which comes from these helper
	methods.
	Change the exit to really quit the gtk thread.
	Add dom interface support.

2007-09-23  Andreia Gaita  <avidigal@novell.com>

	* Implement dialog popups through the custom 
	PromptService - alert, alertcheck, confirm,
	confirmcheck, confirmex, prompt, promptpassword,
	promptusernameandpassword, select
	Fix event naming.
	BrowserWindow is now an interface, don't know if
	that is to keep.

2007-09-13  Andreia Gaita  <avidigal@novell.com>

	* add enumeration to control focus
	* remove blur method (not needed)
	* fix bad parameter on gtk_shutdown

2007-09-12  Andreia Gaita  <avidigal@novell.com>

	* GtkWidget.cpp: Fix keyboard handling
	* Widget.*, xulbrowser.*: 
		- setup shutdown routines
		- do a bit more logging, prepare for non-debug builds

Mon Aug 20 19:45:18 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* Widget.cpp: set the parent earlier in CreateBrowserWindow ().

2007-08-09 Andreia Gaita <avidigal@novell.com>

	* LocationProvider.*: Custom directory service